# aesir_rl

./: .gitignore  MUJOCO_LOG.TXT  README.md  setup.bash  train_ppo.py
adapters/: action_adapter.py  aesir_adapter.py  mujoco_adapter.py
decreped/: pista_pallets.xml
decreped/model_robot/: aesir_mujoco.xml  aesir_mujoco_robot_only.xml  compilation.py  load.py  ppo_conv_train.py  ppo_pallets_train.py  sensors.py  test_actuators.py
decreped/model_robot/meshes/: lidar.stl
decreped/model_robot/rl_agent_env/: setup.py
decreped/model_robot/rl_agent_env/launch/: train_agents.launch.py
decreped/model_robot/rl_agent_env/rl_agent_env/: __init__.py  lidar_publisher.py
decreped/model_robot/rl_agent_env/worlds/: pista_pallets.xml
decreped/model_robot/rl_trainer/: setup.py
decreped/model_robot/rl_trainer/rl_trainer/: __init__.py  train_ppo.py
env/: aesir_env.py
model_robot/: PATHS_CONFIGURATION.md  aesir_mujoco.xml  aesir_mujoco_robot_only.xml  compilation.py  path_utils.py  ppo_conv_train.py  ppo_multiagent_train.py  rescue_robot_v2.urdf.xacro  test_actuators.py  verify_setup.py
model_robot/assets/: aesir_complete.xml  aesir_puro.urdf
model_robot/assets/meshes/: base_link.stl  flipper_1_1.stl  flipper_2_1.stl  flipper_3_1.stl
model_robot/assets/meshes/puerta/: base_link.stl  manija_1.stl  puerta_1.stl
model_robot/assets/words/: solo_pallets.xml  solo_puerta.xml
model_robot/meshes/: flipper_4_1.stl  tracked_1.stl  tracked_2.stl
model_robot/rl/: load.py  sensors.py
models/: aesir_complete.xml  aesir_mujoco_robot.xml  aesir_pallets.xml  aesir_puerta.xml  mapa_completo.xml
models/meshes/robot/: logitech_c920.stl
pistas_temporal/pallets/PALLETS_description/: CMakeLists.txt
pistas_temporal/pallets/PALLETS_description/launch/: controller.launch  controller.yaml
pistas_temporal/pallets/PALLETS_description/meshes/: base_link.stl
pistas_temporal/pallets/PALLETS_description/urdf/: PALLETS.gazebo  materials.xacro
pistas_temporal/pista maze/pallets/PALLETS_description/: package.xml
pistas_temporal/pista maze/pallets/PALLETS_description/launch/: display.launch  gazebo.launch
pistas_temporal/pista maze/pallets/PALLETS_description/urdf/: PALLETS.trans  PALLETS.xacro
pistas_temporal/pista maze/pista maze/MAZE_description/: CMakeLists.txt  package.xml
pistas_temporal/pista maze/pista maze/MAZE_description/launch/: controller.launch  controller.yaml  display.launch  (+1 more)
pistas_temporal/pista maze/steps/COMPONENTS_description/: package.xml
pistas_temporal/puerta/(Unsaved)_description/launch/: controller.launch  controller.yaml
pistas_temporal/puerta/(Unsaved)_description/urdf/: (Unsaved).gazebo
pistas_temporal/steps/COMPONENTS_description/: CMakeLists.txt
pistas_temporal/steps/COMPONENTS_description/launch/: controller.launch  display.launch  gazebo.launch
pistas_temporal/steps/COMPONENTS_description/meshes/: Component3_1.stl  Component3_2.stl  Component3_3.stl  Component3_4.stl
pistas_temporal/steps/COMPONENTS_description/urdf/: COMPONENTS.gazebo  COMPONENTS.xacro  materials.xacro
rl_ws/: GUIA_EJECUCION.md  GUIA_ROS_MOVEIT.md  arm_env.py  base_env.py  combined_env.py  ppo_conv_train.py  ppo_pallets_train.py  ros_bridge.py  test_base.py  train_base.py
ros2_ws/src/aesir_robot_description/: CMakeLists.txt  package.xml
ros2_ws/src/aesir_robot_description/launch/: robot.launch.py  robot_arm.launch.py
ros2_ws/src/aesir_robot_description/meshes/: flipper_1.stl  flipper_3.stl
ros2_ws/src/aesir_robot_description/urdf/: arm.urdf.xacro  rescue_robot.urdf.xacro  rescue_robot_foxglove.urdf.xacro
ros2_ws/src/aesir_robot_description/worlds/: mapa_completo.xml  solo_pallets.xml  solo_puerta.xml
ros2_ws/src/robot_moveit_config/: CMakeLists.txt  README.md  aesir_plugin.xml  package.xml
ros2_ws/src/robot_moveit_config/config/: initial_positions.yaml  rescue_robot.ros2_control.xacro  rescue_robot.urdf.xacro  servo_params.yaml
ros2_ws/src/robot_moveit_config/launch/: bringup.launch.py  bringup_controllers.launch.py  bringup_viz.launch.py  commander.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ros2_ws/src/robot_moveit_config/scripts/: diagnose_pipeline.py  test_pipeline.py  test_teleop.py  verify_stack.py
ros2_ws/src/robot_moveit_config/src/: arm_command_node.cpp  topic_bridge_hardware.cpp
workspace/: RL_ARCHITECTURE.md  RUNNING_INSTRUCTIONS.md
workspace/src/aesir_robot_description/launch/: aesir_complete.xml
workspace/src/aesir_robot_description/meshes/: base.stl  flipper_2.stl  flipper_4.stl
workspace/src/aesir_robot_description/urdf/: rescue_robot.urdf.xacro
workspace/src/aesir_robot_description/worlds/: aesir_scene.xml  mapa_completo.xml  solo_pallets.xml  solo_puerta.xml
workspace/src/mujoco_package/adapters/: aesir_adapter.py  mujoco_adapter.py
workspace/src/rl_agent_env/: package.xml  setup.cfg
workspace/src/rl_agent_env/launch/: train_agents.launch.py
workspace/src/rl_agent_env/rl_agent_env/: __init__.py  rl_env.py  ros_bridge.py
workspace/src/rl_agent_env/worlds/: aesir_robot.xml
workspace/src/rl_trainer/: package.xml  setup.cfg
workspace/src/rl_trainer/rl_trainer/: path_utils.py  train_ppo.py
workspace/src/robot_moveit_config/: .setup_assistant  CMakeLists.txt
workspace/src/robot_moveit_config/config/: initial_positions.yaml  rescue_robot.ros2_control.xacro  rescue_robot.srdf  rescue_robot.urdf.xacro  ros2_controllers.yaml  servo_params.yaml
workspace/src/robot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  servo_teleop.launch.py
workspace/src/robot_moveit_config/scripts/: hardware_loopback.py  test_teleop_joints.py  verify_stack.py
(+36 files in other folders)
