<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_agent_env</name>
  <version>0.0.1</version>
  <description>
    Sync/async bridge between a custom PPO trainer (PyTorch) and a MuJoCo-backed
    ROS 2 stack driven by mujoco_ros2_control + MoveIt Servo. Exposes a
    Gym-like Env that hides the asynchronous ROS spin loop from the PPO trainer.
  </description>

  <maintainer email="edidier11@outlook.com">didier</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS 2 client + message dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- Numerics / DL stack used by the trainer -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-torch</exec_depend>

  <!-- Stack launched by train_agents.launch.py alongside the env -->
  <exec_depend>moveit_servo</exec_depend>
  <exec_depend>mujoco_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Sibling packages whose share/ trees the launch file resolves -->
  <exec_depend>robot_moveit_config</exec_depend>
  <exec_depend>aesir_robot_description</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
